# Discordia

./: .gitattributes  CMakeLists.txt  README.md  discordia.service  install.sh
Discordia/: discordia_api.cpp  discordia_api.h  internal.h  lua_functions.cpp  lua_functions.h  main.cpp  util.cpp  util.h
Discordia/Source/: main.cpp
